--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "react-textarea-autosize": "^8.5.9",
+    "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
